# ztr

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  ztr.toml
.changes/: config.toml  lib.md  pub.md
src/: compressor.rs  config.rs  ignore_rules.rs  lib.rs  main.rs
